<resources>
    <string name="app_name">심플보드</string>
    <string name="email">이메일</string>
    <string name="pw">비밀번호</string>
    <string name="login">로그인</string>
    <string name="signup">회원가입</string>
    <string name="register">가입하기</string>
    <string name="pw_confirm">비밀번호 확인</string>
    <string name="logout">로그아웃</string>
    <string name="cancel">취소</string>
    <string name="setting">설정</string>
    <string name="content">내용을 입력하세요. </string>
    <string name="upload">업로드</string>
    <string name="delete">삭제</string>
    <string name="friend">친구</string>
    <string name="post">게시물</string>
</resources>